--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <main>
         <div class="card">
+            <h2>Rainy Days</h2>
+            <img src="/images/skjermbilde_rainy-days.jpg" alt="">
+            <p>This is my first website, built using HTML, CSS, and JS. I am using WordPress as a headless CMS and WooCommerce where I have added products.</p>
+            <a href="https://github.com/ebergeng/RainyDays" class="cta">link to git</a>
+            <a href="https://velvety-blini-002fa1.netlify.app/" class="cta">link to site</a>
         </div>
         
         <div class="card">
